--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
-<!DOCTYPE html><html>
-  <head>
-    <title>First Github Website</title>
-  </head>
-  <body>
-    It's Aloha Tuesday!
-  </body>
+<!DOCTYPE html>
+
+<html lang ="en">
+        <head>
+            <title>
+                    webOne
+            </title>
+        </head>
+        <body>
+            <!-- Style file and picture for the 4 dogs -->
+            <link rel="stylesheet" type="text/css" href="style.css">
+            <img id="pic1" src="Picture.png" alt="Picture with 4 dogs">
+
+            <h1 class ="topstart" id = "top1"><strong>All about Dogs!</strong></h1>
+            <p class ="paragraph">The dog is a domesticated descendant of the gray wolf. Also called the domestic dog, it was selectively bred from an extinct population of wolves during the Late Pleistocene by hunter-gatherers. The dog was the first species to be domesticated by humans, over 14,000 years ago and before the development of agriculture <br><br> <em><strong>Now they are our furry friends!</strong></em> They are now animals that we love and care for everyday in our homes and they are our best friends for life!</p>
+
+            <h1 class="topstart" id = "top2">How much do they cost?</h1>
+            <p class = "paragraph">Depending on the breed they all vary in prices!</p>
+            <h3 class="topstart">List of furry friend breeds!</h3>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th class="table1">Breed</th>
+                        <th class="table1">Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+
+        </body>
 </html>
