--- a/index.html
+++ b/index.html
@@ -6,26 +6,95 @@
                     webOne
             </title>
         </head>
-        <body>
+        <body style = "background-color: lightblue;">
             <!-- Style file and picture for the 4 dogs -->
             <link rel="stylesheet" type="text/css" href="style.css">
             <img id="pic1" src="Picture.png" alt="Picture with 4 dogs">
 
+            <ul class = "tbc">
+                <h4>Table of Content</h4>
+                <li><a href="#top1">All about Dogs!</a><br><br></li>
+                <li><a href="#top2">Dog Prices and Breeds</a><br><br></li>
+                <li><a href="#top3">Dog lifespan<br><br></a></li>
+                <li><a href="#top4">Dog facts</a><br><br></li>
+                <li><a href="#top5">Learn more about dogs!</a></li>
+            </ul>
             <h1 class ="topstart" id = "top1"><strong>All about Dogs!</strong></h1>
-            <p class ="paragraph">The dog is a domesticated descendant of the gray wolf. Also called the domestic dog, it was selectively bred from an extinct population of wolves during the Late Pleistocene by hunter-gatherers. The dog was the first species to be domesticated by humans, over 14,000 years ago and before the development of agriculture <br><br> <em><strong>Now they are our furry friends!</strong></em> They are now animals that we love and care for everyday in our homes and they are our best friends for life!</p>
+            <p class ="paragraph">The dog is a domesticated descendant of the gray wolf. Also called the domestic dog, it was selectively bred from an extinct population of wolves during the Late Pleistocene by hunter-gatherers. The dog was the first species to be domesticated by humans, over 14,000 years ago and before the development of agriculture <br><br> <em><strong id ="friend">Now they are our furry friends!</strong></em> They are now animals that we love and care for everyday in our homes and they are our best friends for life!</p>
 
             <h1 class="topstart" id = "top2">How much do they cost?</h1>
             <p class = "paragraph">Depending on the breed they all vary in prices!</p>
             <h3 class="topstart">List of furry friend breeds!</h3>
 
-            <table>
+            <table class = "table1">
                 <thead>
                     <tr>
-                        <th class="table1">Breed</th>
-                        <th class="table1">Price</th>
+                        <th><strong>Breed</strong></th>
+                        <th><strong>Price</strong></th>
                     </tr>
                 </thead>
                 <tbody>
+                    <tr>
+                        <td>German Shepherd</td>
+                        <td>$2000 to $4500</td>
+                    </tr>
+                    <tr>
+                        <td>Bulldog</td>
+                        <td>$2000 to $3000</td>
+                    </tr>
+                    <tr>
+                        <td>Golden Retriever</td>
+                        <td>$1000 to $3500</td>
+                    </tr>
+                    <tr>
+                        <td>Corgi</td>
+                        <td>$1000 to $2200</td>
+                    </tr>
+                    <tr>
+                        <td>Maltese</td>
+                        <td>$1000 to $4500</td>
+                    </tr>
+                    <tr>
+                        <td>Dachshund</td>
+                        <td>$1500 to $3500</td>
+                    </tr>
+                    <tr>
+                        <td>Husky</td>
+                        <td>$1200 to $1500</td>
+                    </tr>
+                    <tr>
+                        <td>Shiba Inu</td>
+                        <td>$1400 to $3500</td>
+                    </tr>
+                    <tr>
+                        <td>Chihuahua</td>
+                        <td>$800 to $7000</td>
+                    </tr>
+                    <tr>
+                        <td>Beagle</td>
+                        <td>$600 to $2000</td>
+                    </tr>
+                    <tr>
+                        <td>Pomeranian</td>
+                        <td>Approx $1650</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <h1 class = "topstart" id="top3"> How long do they live?</h1>
+            <p class ="paragraph"> On average, dogs live for <strong>10-13 years</strong>, which is considered roughly equivalent to between 60-74 human years. Make sure to give your dog lots of love!</p>
+
+            <h1 class = "topstart" id = "top4"> 10 Scientific Dog facts!</h1>
+
+            <img id="img1" src="Picture3.png" alt ="10 dog facts!">
+            <img id="img2" src ="Picture2.png" alt ="Group of dogs">
+
+            <h4 class = "topstart" id="top5">Learn more from this link below!</h4>
+            <p class = "paragraph"><a href="https://www.natgeokids.com/uk/discover/animals/general-animals/dog-facts/">Learn more!</a></p>
+
+        </body>
+</html>
+
 
                 </tbody>
             </table>
